tests/__snapshots__/feature-reporters-quiet-stderr.snap.txt
Error: Type 'string' is not the same as type 'number'.

  4 | });
  5 | test("is number?", () => {
  6 |   expect<string>().type.toBe<number>();
    |                              ~~~~~~
  7 | });
  8 | 

      at ./__typetests__/a-feature.tst.ts:6:30 â­ is number?

